Added Explore Passion Projects button

--- a/Home.html
+++ b/Home.html
@@ -65,6 +65,9 @@
     <a href="Internships.html">
         <button class="cta-button"><b>Find an Opportunity →</b></button>
     </a>
+    <a href="PassionProjects.html"> <!-- Make sure you change this link to the correct page for passion projects -->
+        <button class="cta-button"><b>Explore Passion Projects →</b></button>
+    </a>
 </header>
 
 
