--- a/PassionProjects.html
+++ b/PassionProjects.html
@@ -14,7 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us - Pathway Interns</title>   
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/frstyles.css">
+    <link rel="stylesheet" href="css/ppstyles.css">
     <link rel="icon" href="images/logo.png" type="image/png">
 </head>
 <body>
