--- a/PassionProjects.html
+++ b/PassionProjects.html
@@ -47,7 +47,11 @@
 
     <!-- About Us Boxes -->
     <section class="resources-section">
-            <p> Here are some passion projects led by amazing youth that YOU can participate in today! They are looking for leaders, innovators, and people interested in their message.</p></p>
+            <p> Built something you’re proud of? Designed, coded, created, or dreamed up something cool?
+
+                Whether it’s an app, research paper, art portfolio, startup idea, or something totally random — we want to showcase YOU.
+                
+                We feature projects weekly on our platform + social media. Bonus: Early submitters get access to special shoutouts, giveaways, and exclusive badges 🌟</p>
             <div class="resource-boxes">
                 <!-- PIVOT Passion Project Box -->
                 <div class="resource">
@@ -57,6 +61,22 @@
                     <p><strong>Contact:</strong> <a href="mailto:pivotthinktank@gmail.com" style="text-decoration: underline;">pivotthinktank@gmail.com</a></p>
                     <p><strong>Social Media:</strong> <a href="https://www.instagram.com/pivot.youth/" style="text-decoration: underline;">Instagram</a></p>
                 </div>
+                <div class="resource">
+                    <h3>Student Climate Research Initiative</h3>
+                    <p><strong>About:</strong> The Student Climate Research Initiative (SCRI) is a student-founded program designed for high schoolers passionate about environmental science and policy. Participants collaborate virtually with peers across the globe to research the effects of climate change in their communities and propose sustainable solutions. Accepted fellows present their findings in an annual digital summit and receive feedback from university researchers and environmental NGOs. The initiative runs twice a year with a flexible online schedule.</p>
+                </div>
+                <div class="resource">
+                    <h3>Gen Z Art Journal: "Unbound"</h3>
+                    <p><strong>About:</strong> "Unbound" is a digital journal dedicated to showcasing the visual and written work of Gen Z creatives. From poetry and short stories to digital collages and photography, this journal accepts submissions year-round and curates quarterly themed issues. Contributors have their work featured on a professionally designed platform and can be considered for the “Editor’s Spotlight” each season. Open to students ages 13–18 globally.</p>
+                </div>
+                <div class="resource">
+                    <h3>BioBuddies: Peer STEM Mentorship</h3>
+                    <p><strong>About:</strong> BioBuddies connects high school students interested in biology, chemistry, and environmental science with college mentors studying in related fields. This free program includes monthly virtual check-ins, collaborative mini-research challenges, and guidance on competition and scholarship applications. BioBuddies promotes inclusion in STEM and encourages interdisciplinary exploration across the sciences. Mentorship runs in 3-month cycles with a chance to renew.</p>
+                </div>
+                <div class="resource">
+                    <h3>Youth Voices for Justice (YVJ)</h3>
+                    <p><strong>About:</strong> Youth Voices for Justice is a student-led initiative focused on storytelling and advocacy for social equity. Members write op-eds, conduct interviews, and produce short-form media on issues like education, mental health, racial justice, and youth rights. Each participant is assigned a topic cohort and guided by editorial mentors to craft compelling narratives and calls to action. New cycles begin every January and July.</p>
+                </div>                                                                
             </div>            
     </section>
     <!-- Footer -->
