Updated Passion Projects Page

--- a/PassionProjects.html
+++ b/PassionProjects.html
@@ -47,11 +47,12 @@
 
     <!-- About Us Boxes -->
     <section class="resources-section">
-            <p> Built something you’re proud of? Designed, coded, created, or dreamed up something cool?
-
-                Whether it’s an app, research paper, art portfolio, startup idea, or something totally random — we want to showcase YOU.
+            <p> Have an idea for a passion project—but no one to start it with?
+                Find like-minded students ready to build with you, right here on our platform.
                 
-                We feature projects weekly on our platform + social media. Bonus: Early submitters get access to special shoutouts, giveaways, and exclusive badges 🌟</p>
+                Already created something you’re proud of? An app, research paper, business, art piece, or literally anything. Submit it to be featured on our site and social media!
+                Connect. Collaborate. Get seen.
+                This is where student ideas take off</p>
             <div class="resource-boxes">
                 <!-- PIVOT Passion Project Box -->
                 <div class="resource">
