Updated Pas sion Projects Page

--- a/PassionProjects.html
+++ b/PassionProjects.html
@@ -51,6 +51,7 @@
                 Find like-minded students ready to build with you, right here on our platform.
                 
                 Already created something you’re proud of? An app, research paper, business, art piece, or literally anything. Submit it to be featured on our site and social media!
+                Want to join a passion project? Use the contact information listed in your choice of opportunity right here.
                 Connect. Collaborate. Get seen.
                 This is where student ideas take off</p>
             <div class="resource-boxes">
