--- a/PassionProjects.html
+++ b/PassionProjects.html
@@ -64,9 +64,12 @@
                     <p><strong>Social Media:</strong> <a href="https://www.instagram.com/pivot.youth/" style="text-decoration: underline;">Instagram</a></p>
                 </div>
                 <div class="resource">
-                    <h3>Student Climate Research Initiative</h3>
-                    <p><strong>About:</strong> The Student Climate Research Initiative (SCRI) is a student-founded program designed for high schoolers passionate about environmental science and policy. Participants collaborate virtually with peers across the globe to research the effects of climate change in their communities and propose sustainable solutions. Accepted fellows present their findings in an annual digital summit and receive feedback from university researchers and environmental NGOs. The initiative runs twice a year with a flexible online schedule.</p>
-                </div>
+                    <h3>Project Light Shade</h3>
+                    <p><strong>About:</strong> ProjectLightShade is a youth-led initiative dedicated to advocating for sun safety and skincare equity, particularly for Black and brown communities. Despite the misconception that melanin offers complete protection from the sun, our communities remain vulnerable to sun damage, skin cancer, and hyperpigmentation. ProjectLightShade seeks to raise awareness, educate, and promote healthier skincare practices while addressing the disparities in the skincare industry. Our mission is to empower individuals to take control of their skin health and to fight for greater representation and inclusivity in sun safety and skincare.</p>
+                    <p><strong>Website + Application:</strong> <a href="https://sites.google.com/view/projectlightshade/home" style="text-decoration: underline;">Visit Project Light Shade</a></p>
+                    <p><strong>Contact:</strong> <a href="mailto:projectlightshade@gmail.com" style="text-decoration: underline;">projectlightshade@gmail.com</a></p>
+                    <p><strong>Social Media:</strong> <a href="https://www.instagram.com/projectlightshade/" style="text-decoration: underline;">Instagram</a></p>
+                </div>                
                 <div class="resource">
                     <h3>Gen Z Art Journal: "Unbound"</h3>
                     <p><strong>About:</strong> "Unbound" is a digital journal dedicated to showcasing the visual and written work of Gen Z creatives. From poetry and short stories to digital collages and photography, this journal accepts submissions year-round and curates quarterly themed issues. Contributors have their work featured on a professionally designed platform and can be considered for the “Editor’s Spotlight” each season. Open to students ages 13–18 globally.</p>
