Your commit message here

--- a/PassionProjects.html
+++ b/PassionProjects.html
@@ -59,7 +59,7 @@
                 <div class="resource">
                     <h3>PIVOT: International Youth-Led Think Tank</h3>
                     <p><strong>About:</strong> PIVOT is an international and remote youth-led think tank that empowers young people ages 13–19 to research, write, and advocate for policy solutions that address today’s most pressing issues. Our mission is to ensure youth voices are heard at every level of government—local, national, and global. Through collaborative research cohorts, mentorship from policy professionals, and real-world advocacy opportunities, PIVOT fellows are given the tools to turn their ideas into impact. The fellowship is indefinite, offers opportunities to publish original research, and allows fellows to later step into leadership roles. Our team currently includes over 50 youth across the world.</p>
-                    <p><strong>Application Form:</strong> <a href="https://forms.gle/TSUZSZycEpw3xTRT8" style="text-decoration: underline;">Apply Now</a></p>
+                    <p><strong>Application Form:</strong> <a href="https://forms.gle/TSUZSZycEpw3xTRT8" style="text-decoration: underline;">Visit PIVOT: International Youth-Led Think Tank</a></p>
                     <p><strong>Contact:</strong> <a href="mailto:pivotthinktank@gmail.com" style="text-decoration: underline;">pivotthinktank@gmail.com</a></p>
                     <p><strong>Social Media:</strong> <a href="https://www.instagram.com/pivot.youth/" style="text-decoration: underline;">Instagram</a></p>
                 </div>
@@ -71,17 +71,48 @@
                     <p><strong>Social Media:</strong> <a href="https://www.instagram.com/projectlightshade/" style="text-decoration: underline;">Instagram</a></p>
                 </div>                
                 <div class="resource">
-                    <h3>Gen Z Art Journal: "Unbound"</h3>
-                    <p><strong>About:</strong> "Unbound" is a digital journal dedicated to showcasing the visual and written work of Gen Z creatives. From poetry and short stories to digital collages and photography, this journal accepts submissions year-round and curates quarterly themed issues. Contributors have their work featured on a professionally designed platform and can be considered for the “Editor’s Spotlight” each season. Open to students ages 13–18 globally.</p>
+                    <h3>California Association of Student Councils (CASC) Summer Leadership Conference </h3>
+                    <p><strong>About:</strong> The California Association of Student Councils is an organization founded by the CA Department of Education in 1947. CASC’s student leaders work to implement real legislative change in the state, and the Summer Leadership Conference equips attendees with the skills that they need to make change in their communities. The Summer Leadership Conference will be held from July 28th to 31st at UC Santa Barbara. Attendees & CASC cabinet have gone on to T20 Universities including Harvard, UPenn, Columbia, and Cornell, and this conference helps students gain experience to become more involved with CASC as a whole. Final registration ends on July 12th. </p>
+                    <p><strong>Website + Application:</strong> <a href="www.casc.net/programs/summer" style="text-decoration: underline;">Visit CASC Summer Leadership Conference</a></p>
+                    <p><strong>Contact:</strong> <a href="mailto:jasleen.khangura@casc.net" style="text-decoration: underline;">jasleen.khangura@casc.net</a></p>
+                    <p><strong>Social Media:</strong> <a href="https://www.instagram.com/cascleaders/?hl=en" style="text-decoration: underline;">Instagram</a></p>
                 </div>
                 <div class="resource">
-                    <h3>BioBuddies: Peer STEM Mentorship</h3>
-                    <p><strong>About:</strong> BioBuddies connects high school students interested in biology, chemistry, and environmental science with college mentors studying in related fields. This free program includes monthly virtual check-ins, collaborative mini-research challenges, and guidance on competition and scholarship applications. BioBuddies promotes inclusion in STEM and encourages interdisciplinary exploration across the sciences. Mentorship runs in 3-month cycles with a chance to renew.</p>
+                    <h3>Stories Under The Skin</h3>
+                    <p><strong>About:</strong> Stories Under The Skin is a youth-led initiative exploring the intersection of physical and mental health through interviews with medical professionals, psychological insights, and student-written reflections. The project aims to amplify the voices of those navigating chronic illness and mental health challenges. Roles currently available include Writing Fellow, Featured Contributor, Youth Ambassador, and Outreach Partner. Team recruitment is also open—interested individuals are encouraged to connect via social media or email.</p>
+                    <p><strong>Application:</strong> 
+                        <div>
+                            <div><a href="https://forms.gle/L7AZznatXRQPQt7h6" style="text-decoration: underline;">Writing Fellow Application</a></div>
+                            <div><a href="https://forms.gle/ikVbdjyfsnKG55Kv9" style="text-decoration: underline;">Youth Ambassador Application</a></div>
+                            <div><a href="https://forms.gle/gKwp5jwivRAm5zjk9" style="text-decoration: underline;">Outreach Partner Application</a></div>
+                            <div><a href="https://forms.gle/niZQAbczvR83VTT27" style="text-decoration: underline;">Featured Contributor Application</a></div>
+                        </div>
+                    </p>
+                    <p><strong>Social Media:</strong> Instagram & TikTok — @storiesundertheskin</p>
                 </div>
-                <div class="resource">
-                    <h3>Youth Voices for Justice (YVJ)</h3>
-                    <p><strong>About:</strong> Youth Voices for Justice is a student-led initiative focused on storytelling and advocacy for social equity. Members write op-eds, conduct interviews, and produce short-form media on issues like education, mental health, racial justice, and youth rights. Each participant is assigned a topic cohort and guided by editorial mentors to craft compelling narratives and calls to action. New cycles begin every January and July.</p>
-                </div>                                                                
+                <div class="resource"> 
+                    <h3>Wellness Without Borders</h3>
+                    <p><strong>About:</strong> Wellness Without Borders is an organization started by high school students to give medical supplies and funding to individuals in underserved communities. With over 7,000 tons of clean, usable medical supplies in the U.S., worth more than $20 billion, we aim to bridge the gap between excess and need. By redirecting these resource to clinics and hospitals in dire need, WWB ensures that no medical resource goes to waste while countless individuals lack essential care. We believe that every community, regardless of their economic situation, deserves access to the medical supplies that can save lives!</p>
+                    <p><strong>Application:</strong> <a href="https://forms.gle/3SPeyLAxtwndyCjw9" style="text-decoration: underline;">Visit Wellness Without Borders</a></p>
+                    <p><strong>Contact:</strong> <a href="mailto:Idimaogechi210@gmail.com" style="text-decoration: underline;">Idimaogechi210@gmail.com</a></p>
+                    <p><strong>Social Media:</strong> 
+                        <a href="https://www.instagram.com/wwb_nys?igsh=NGwyZGI2dmlxaWtx&utm_source=qr" style="text-decoration: underline;">Instagram</a> & 
+                        <a href="https://www.tiktok.com/@wwb_nys?_t=ZT-8xEQMRQSBsB&_r=1" style="text-decoration: underline;">TikTok</a>
+                    </p>
+                </div>   
+                <div class="resource"> 
+                    <h3>The Givora Foundation</h3>
+                    <p><strong>About:</strong>The Givora Foundation is a nonprofit organization dedicated to donation drives for certain shelters including those of homelessness and domestic violence. Our mission is to collaborate with the local community and partners to provide resources for individuals in need. We strive for equitable distributions and ensuring quality services.</p>
+                    <p><strong>Application:</strong> <a href="https://forms.gle/FqVj3joZmh1hVDGs6" style="text-decoration: underline;">Visit The Givora Foundation</a></p>
+                    <p><strong>Contact:</strong> <a href="mailto:thegivorafoundation@gmail.com" style="text-decoration: underline;">thegivorafoundation@gmail.com</a></p>
+                    <p><strong>Social Media:</strong> Instagram — @thegivorafoundation</p>
+                </div> 
+                <div class="resource"> 
+                    <h3>Clean Streets DC</h3>
+                    <p><strong>About:</strong>Working to adopt a block in Washington, DC and conduct weekly cleanups on said block in order to limit the impact that tourists have on the local area when it comes to litter and pollution.</p>
+                    <p><strong>Contact:</strong> <a href="mailto:katemwalter@icloud.com" style="text-decoration: underline;">katemwalter@icloud.com</a></p>
+                    <p><strong>Social Media:</strong> <a href="https://www.instagram.com/clean.streets.dc?igsh=ejMwcnhrM2dpMGQx" style="text-decoration: underline;">Instagram</a></p>
+                </div>                                                                    
             </div>            
     </section>
     <!-- Footer -->
