Describe what you changed

--- a/PassionProjects.html
+++ b/PassionProjects.html
@@ -61,6 +61,55 @@
     </p>
 
     <div class="resource-boxes">
+     
+      <div class="resource">
+        <h3>Wisdom Library</h3>
+        <p><strong>About:</strong> Wisdom Library is a social media platform where seniors share their wisdom and stories. It highlights their societal importance and legacies while preserving their stories digitally for future generations.</p>
+        <p><strong>Contact:</strong> <a href="mailto:barryliang54@gmail.com">barryliang54@gmail.com</a></p>
+        <p><strong>Social Media:</strong> <a href="https://www.tiktok.com/@the_wisdomlibrary?_t=ZT-8yRi7jUHkmz&_r=1">TikTok</a></p>
+      </div>
+
+      <div class="resource">
+        <h3>Strokes of Young Minds</h3>
+        <p><strong>About:</strong> Strokes of Young Minds is a digital art gallery gathering artists who have existing works—or are open to creating new pieces—focused on mental health and personal experiences. The goal is to spark meaningful conversations around mental health through art, reaching and engaging youth through school partnerships and organizations like Everwell. Artists featured will be showcased on our site, helping amplify both their voices and the impact of mental health awareness.</p>
+        <p><strong>Application:</strong> <a href="https://kkaylakwon.wixsite.com/stroke-of-youngminds">Visit Strokes of Young Minds</a></p>
+        <p><strong>Contact:</strong> <a href="mailto:Strokesofyoungminds@gmail.com">Strokesofyoungminds@gmail.com</a></p>
+        <p><strong>Social Media:</strong> <a href="https://www.instagram.com/strokes.of.young.minds/">Instagram</a></p>
+      </div>
+
+      <div class="resource">
+        <h3>UMA: United Medical Allegiance</h3>
+        <p><strong>About:</strong> UMA is a student-led organization dedicated to empowering future healthcare professionals to combat health disparities through advocacy, education, volunteerism, and meaningful opportunities. With several chapters across the U.S., UMA is currently seeking passionate Community Ambassadors and Executive Board Members to expand our mission and deepen our impact.</p>
+        <p><strong>Application:</strong> <a href="https://linktr.ee/UMA.health">Visit UMA</a></p>
+        <p><strong>Contact:</strong> <a href="mailto:unitedmedicalallegiance@gmail.com">unitedmedicalallegiance@gmail.com</a></p>
+        <p><strong>Social Media:</strong> 
+          <a href="https://www.tiktok.com/@united_med_allegiance">TikTok</a> | 
+          <a href="https://www.instagram.com/united_med_allegiance/">Instagram</a>
+        </p>
+        <p><strong>Additional Info:</strong> We are actively recruiting Executive Board Members and Community Ambassadors to lead new UMA chapters and drive change in their local and regional communities. Open roles include Social Media Director, Events Director, Pathways Director, Volunteer Director, Partnerships Coordinator, Finance Coordinator, Community Education Director, Advocacy Director, Chapter Coordinator, Website Manager, and more. Pitch a custom role if you have a unique idea!</p>
+      </div>
+
+      <div class="resource">
+        <h3>The Lace Code</h3>
+        <p><strong>About:</strong> N.T.G is an international participatory study on how toxic exposure shapes the brain and behavior of girls and adolescents.</p>
+        <p><strong>Social Media:</strong> <a href="https://www.tiktok.com/@thelacecode?_t=ZM-8y7QduIeHH3&_r=1">TikTok</a></p>
+      </div>
+
+      <div class="resource">
+        <h3>Rest</h3>
+        <p><strong>About:</strong> Rest is a youth-led nonprofit organization made to help musicians recover and prevent burnout through reflections, community support, and wellness tools. Founded in Texas, we advocate that rest isn't a weakness, but just another part of the music. Just like pauses in a score, rest gives meaning, breath, and beauty to everything around it!</p>
+        <p><strong>Application:</strong> <a href="https://linktr.ee/restformusicians">Visit Rest</a></p>
+        <p><strong>Contact:</strong> <a href="mailto:restformusicians@gmail.com">restformusicians@gmail.com</a></p>
+        <p><strong>Additional Info:</strong> We are looking for Blog Writers, Discord Moderators, and Social Media Interns.</p>
+      </div>
+
+      <div class="resource">
+        <h3>Project Pathway</h3>
+        <p><strong>About:</strong> Project Pathway is a youth-led initiative dedicated to expanding access to technology and education for underserved communities in India. Through hands-on coding workshops (based in Fremont, California), mentorship, and fundraising, we aim to empower students with the tools and confidence to dream bigger and build brighter futures.</p>
+        <p><strong>Application:</strong> <a href="https://projecttpathway.wixsite.com/project-pathway-1">Visit Project Pathway</a></p>
+        <p><strong>Contact:</strong> <a href="mailto:projectpathway4@gmail.com">projectpathway4@gmail.com</a></p>
+        <p><strong>Social Media:</strong> <a href="https://www.instagram.com/project.pathwayy?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">Instagram</a></p>
+      </div>
 
       <div class="resource">
         <h3>CyberBear</h3>
